--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -98,7 +98,13 @@
       </div>
     </div>
     <div id="company_info">
-      <p>This is where the company address, copyright etc will go</p>
+      <address>
+        <strong>Suns Up Solar.</strong>
+        224 Dufour Street
+        Santa Cruz, CA 95060
+        Phone: (831) 458-0203
+        Email: peter@sunsupsolar.com
+      </address>
     </div>
   </small>
 </footer>
