--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,12 @@
 <% provide(:title, 'About Us') %>
 
-<p>contact info</p>
+<address>
+  <strong>Suns Up Solar.</strong><br>
+  224 Dufour Street<br>
+  Santa Cruz, CA 95060<br>
+  Phone: (831) 458-0203<br>
+  Email: peter@sunsupsolar.com
+</address>
 
 <h3>SUNS UP SOLAR</h3> <p>is based in Santa Cruz, California. We are a division of Putt Construction which has been doing business on the Central Coast since 1987 as General and Electrical Contractors. 
 
