--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -5,7 +5,7 @@
   224 Dufour Street<br>
   Santa Cruz, CA 95060<br>
   Phone: (831) 458-0203<br>
-  Email: peter@sunsupsolar.com
+  Email: info@sunsupsolar.com
 </address>
 
 <h3>SUNS UP SOLAR</h3> <p>is based in Santa Cruz, California. We are a division of Putt Construction which has been doing business on the Central Coast since 1987 as General and Electrical Contractors. 
