User Table, phoner, user display

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,8 +39,11 @@ nav{
   margin-top: 30px;
   margin-bottom: 0px;
   padding-top: 10px;
-  padding-bottom: 30px;
+  padding-bottom: 10px;
 }
 #company_info p{
   margin-bottom: 0px;
+}
+address{
+  text-align: center; 
 }
