fixed the button color
by commenting out scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
       <div class="col-xs-4">
       <h1>Suns Up Solar</h1>
       </div>
-      <!-- <button type="button" class="btn btn-info pull-right" id="contact_button">Get In Touch</button> -->
-      <%= link_to 'I Want Solar', new_user_path, class: 'btn btn-info pull-right', id:'contact_button' %>
+      <!-- <button type="button" class="btn btn-primary pull-right" id="contact_button">Get In Touch</button> -->
+      <%= link_to 'I Want Solar', new_user_path, class: 'btn btn-primary btn-lg pull-right', id:'contact_button' %>
     </div>
   </div>
   <div class"row" id="navbar">
