--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -44,6 +44,6 @@
       <%= f.number_field :e_bill, class: 'form-control', placeholder: 'Ex: 200' %>
     </div>
     <div class="actions">
-      <%= f.submit 'Make It So', class: 'btn btn-info btn-success', id: 'user_button' %>
+      <%= f.submit 'Make It So', class: 'btn btn-primary btn-lg', id: 'user_button' %>
     </div>
 <% end %>
