Gen- will paginate

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, 'User List') %>
-<h2>Listing users</h2>
+<h2>Registered Users</h2>
 
 <div class="table-responsive">
 <table class="table table-bordered">
