--- a/app/views/installations/show.html.erb
+++ b/app/views/installations/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Users:</strong>
-  <%= @installation.users %>
+  <%= @installation.user %>
 </p>
 
 <%= link_to 'Edit', edit_installation_path(@installation) %> |
