--- a/app/views/installations/_form.html.erb
+++ b/app/views/installations/_form.html.erb
@@ -24,8 +24,8 @@
     <%= f.number_field :zip %>
   </div>
   <div class="field">
-    <%= f.label :users %><br>
-    <%= f.text_field :users %>
+    <%= f.label 'Author' %><br>
+    <%= f.text_field :user_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
