--- a/app/views/installations/index.html.erb
+++ b/app/views/installations/index.html.erb
@@ -1,32 +1,37 @@
-<h1>Listing installations</h1>
+<% provide(:title, 'Installations') %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Address</th>
-      <th>City</th>
-      <th>Zip</th>
-      <th>Users</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @installations.each do |installation| %>
+<h2>Installations</h2>
+<% will_paginate %>
+<div class="table-responsive">
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= installation.address %></td>
-        <td><%= installation.city %></td>
-        <td><%= installation.zip %></td>
-        <td><%= installation.users %></td>
-        <td><%= link_to 'Show', installation %></td>
-        <td><%= link_to 'Edit', edit_installation_path(installation) %></td>
-        <td><%= link_to 'Destroy', installation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Address</th>
+        <th>City</th>
+        <th>Zip</th>
+        <th>Owner</th>
+        <th></th>
+        <th></th>
+        <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @installations.each do |installation| %>
+        <tr>
+          <td><%= installation.address %></td>
+          <td><%= installation.city %></td>
+          <td><%= installation.zip %></td>
+          <td><%= installation.user.name %></td>
+          <td><%= link_to 'Details', installation %></td>
+          <td><%= link_to 'Edit', edit_installation_path(installation) %></td>
+          <td><%= link_to 'Delete', installation, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
+<% will_paginate %>
 
 <br>
 
