--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -92,11 +92,11 @@
           </ul>
         </div>
         <div class="col-xs-3">
-          <h4>External Links</h4>
+          <h4>Admin Links</h4>
           <ul>
-            <li>links</li>
-            <li>links</li>
-            <li>links</li>
+            <li><%= link_to 'Users', users_path %></li>
+            <li><%= link_to 'Installations', installations_path %></li>
+            <li><%= link_to 'News', news_index_path %></li>
             <li>links</li>
           </ul>
         </div>
