--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,34 +1,34 @@
+<% provide(:title, "News")%>
 <h1>Listing news</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Content</th>
-      <th>Image</th>
-      <th>Users</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
+<% will_paginate %>
 
-  <tbody>
-    <% @news.each do |news| %>
+<div class="table-responsive">
+  <table class="table table-bordered">
+    <thead>
       <tr>
-        <td><%= news.title %></td>
-        <td><%= news.author %></td>
-        <td><%= news.content %></td>
-        <td><%= news.image %></td>
-        <td><%= news.users %></td>
-        <td><%= link_to 'Show', news %></td>
-        <td><%= link_to 'Edit', edit_news_path(news) %></td>
-        <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <th>Title</th>
+        <th>Author</th>
+        <th>Content</th>
+        <th>Image</th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
+
+    <tbody>
+      <% @news.each do |news| %>
+        <tr>
+          <td><%= news.title %></td>
+          <td><%= news.user.name %></td>
+          <td><%= news.content %></td>
+          <td><%= news.image %></td>
+          <td><%= link_to 'Details', news %></td>
+          <td><%= link_to 'Edit', edit_news_path(news) %></td>
+          <td><%= link_to 'Delete', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
 
 <br>
 
