--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Author:</strong>
-  <%= @news.author %>
+  <%= @news.user.name %>
 </p>
 
 <p>
@@ -18,11 +18,6 @@
 <p>
   <strong>Image:</strong>
   <%= @news.image %>
-</p>
-
-<p>
-  <strong>Users:</strong>
-  <%= @news.users %>
 </p>
 
 <%= link_to 'Edit', edit_news_path(@news) %> |
