--- a/app/views/installations/_form.html.erb
+++ b/app/views/installations/_form.html.erb
@@ -24,7 +24,7 @@
     <%= f.number_field :zip %>
   </div>
   <div class="field">
-    <%= f.label 'Author' %><br>
+    <%= f.label 'User ID' %><br>
     <%= f.text_field :user_id %>
   </div>
   <div class="actions">
