--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,3 +47,15 @@ nav{
 address{
   text-align: center; 
 }
+thead{
+  background-color: rgba(235, 235, 235, 1);
+  box-shadow: 0px 0px 7px gray;
+  border-top-right-radius: 4px;
+  border-top-left-radius: 4px;
+}
+tbody{
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: 0px 0px 7px gray;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
