heroku image fixing
changing URLs to link_to so they show up on heroku

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <nav class="navbar-fixed-top hidden-xs">
   <div class="row" id="banner">
     <div class="col-xs-10 col-md-offset-1">
-      <img class="img-responsive pull-left hidden-xs" id="logo" alt="Responsive Image" src="/assets/logo_no_text.png"/>
+      <%= image_tag("logo_no_text.png", alt: "Responsive Image", class: "img-responsive pull-left hidden-xs", id: "logo") %>
       <div class="col-xs-4">
       <h1>Suns Up Solar</h1>
       </div>
