--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -68,7 +68,7 @@
     <p>Live off the grid, or simply help save lives overseas.</p>
   </div>
     <div class="col-xs-3 boxes">
-    <img src="/assets/low_maintenance.jpg" alt="image" class="img-circle">
+    <%= image_tag("low_maintenance.jpg", alt: "Low Maintenance Logo", class: "img-circle") %>
     <h3>Low Maintenance</h3>
     <p>Quiet, dependable and reliable systems</p>
   </div>
