Heroku image fixes
changing them from html img takes to image_tag tags

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -21,11 +21,13 @@
 <div class="row">
   <h3>Peter Putt - Integration</h3> 
 
-  <img id="pete" src="/assets/pete.jpg" alt="Photo of Peter Putt"><p>Peter has been doing business in the Central Coast area since 1978. He holds both General and Electrical contractors licenses and believes that customer service is the key to success. He has completed extensive training in solar technology as well as formal training to mitigate power quality issues ranging from harmonics mitigation to dealing with intermittent power issues for a range of clientele. He has been very active in working with the youth within our community, from coaching soccer for over 12 years to being an active member in the Elks Lodge.</p>
+  <%= image_tag("pete.jpg", alt: "Photo of Peter Putt", id: "pete") %>
+  <p>Peter has been doing business in the Central Coast area since 1978. He holds both General and Electrical contractors licenses and believes that customer service is the key to success. He has completed extensive training in solar technology as well as formal training to mitigate power quality issues ranging from harmonics mitigation to dealing with intermittent power issues for a range of clientele. He has been very active in working with the youth within our community, from coaching soccer for over 12 years to being an active member in the Elks Lodge.</p>
 </div>
 
 <div class="row">
   <h3>Tony Perkins – Sales</h3>
 
-  <img id="tony" src="/assets/tony.jpg" alt="Photo of Tony Perkins"><p>Tony for the last 25 years has successfully been in business in Santa Cruz. Tony is a fourth generation Santa Cruz native.  He has been coaching softball teams for the last 15 years. Tony is currently an active member of the Santa Cruz Host Lions and is also a past president of the Capitola Host Lions club. Tony has completed training in the field of Solar Energy and he resides in Santa Cruz with his wife and three daughters.</p> 
+  <%= image_tag("tony.jpg", alt: "Photo of Tony Perkins", id: "tony") %>
+  <p>Tony for the last 25 years has successfully been in business in Santa Cruz. Tony is a fourth generation Santa Cruz native.  He has been coaching softball teams for the last 15 years. Tony is currently an active member of the Santa Cruz Host Lions and is also a past president of the Capitola Host Lions club. Tony has completed training in the field of Solar Energy and he resides in Santa Cruz with his wife and three daughters.</p> 
 </div>
