--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
   <div class="jumbotron" id="jumbotron1">
     <div class="container">
       <div class="jumbo_text">
-        <h1>Energy independence</h1>
+        <h1>Energy Independence</h1>
         <h3>For less than you pay now<h3>
       </div>
       <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
@@ -14,7 +14,7 @@
   <div class="jumbotron" id="jumbotron2">
     <div class="container">
       <div class="jumbo_text">
-        <h1>Energy independence</h1>
+        <h1>Energy Independence</h1>
         <h3>For less than you pay now<h3>
       </div>
       <%= link_to 'Learn More', new_user_path, class: 'btn btn-primary btn-lg jumbobtn' %>
