--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,7 +34,7 @@
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <img class="img-responsive pull-left visible-xs" id="logo_small" alt="Responsive Image" src="/assets/logo_no_text.png"/>
+    <%= image_tag("logo_no_text.png", alt: "Responsive Image", class: "img-responsive pull-left visible-xs", id: "logo_small") %>
     <a class="navbar-brand" href="#">Suns Up Solar</a>
   </div>
 
