image fix static pages

--- a/app/views/static_pages/green.html.erb
+++ b/app/views/static_pages/green.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'Go Green') %>
 
-<img src="/assets/go_green.jpg" alt="image" class="img-circle" id="save_image">
+<%= image_tag("go_green.jpg", alt: "Go Green Icon", class: "img-circle", id="green_image") %>
+
 <h2>Go Green</h2>
 
 <p>This needs to be filled with envronmental benefits of solar.  The following text came from Solar City's site and needs to be changed</p>
