--- a/app/views/static_pages/independence.html.erb
+++ b/app/views/static_pages/independence.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'Energy Independence') %>
 
-<img src="/assets/energy_independence.jpg" alt="Energy Independence Logo" class="img-circle" id="save_image">
+<%= image_tag("energy_independence.jpg", alt: "Energy Independence Logo", class: "img-circle", id="independence_image") %>
+
 <h2>Energy Independence</h2>
 <p>This is from real goods solar and will need to be re-written. Some of the points at th bottom are mine.</p>
 
