--- a/app/views/static_pages/save.html.erb
+++ b/app/views/static_pages/save.html.erb
@@ -1,6 +1,7 @@
 <% provide(:title, 'Save Money') %>
 
-<img src="/assets/save_money.jpg" alt="image" class="img-circle" id="save_image">
+<%= image_tag("save_money.jpg", alt: "Save Money Icon", class: "img-circle", id="save_image") %>
+
 <h2>Save Money</h2>
 <p>If you think about how much your electricity bill is each month (typically between $250- $350 for most California residents) and work out how much you are going to spend on electricity over the next twenty five years, it's a lot of money!!!</p>
 
