--- a/app/views/static_pages/green.html.erb
+++ b/app/views/static_pages/green.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, 'Go Green') %>
 
-<%= image_tag("go_green.jpg", alt: "Go Green Icon", class: "img-circle", id="green_image") %>
+<%= image_tag("go_green.jpg", alt: "Go Green Icon", class: "img-circle", id: "green_image") %>
 
 <h2>Go Green</h2>
 
