--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -1,8 +1,22 @@
 <ul class="nav nav-pills">
-  <li <%= "class=active" if yield(:title) == "Home" %>> <%= link_to 'Home', root_path %> </li>
-  <li <%= "class=active" if yield(:title) == "Tech"        %>> <%= link_to 'Learn About Solar',  tech_path %> </li>
-  <li <%= "class=active" if yield(:title) == "Residential" %>> <%= link_to 'Residential', residential_path %> </li>
-  <li <%= "class=active" if yield(:title) == "Commercial"  %>> <%= link_to 'Commercial',   commercial_path %> </li>
-  <li <%= "class=active" if yield(:title) == "About Us"    %>> <%= link_to 'About Us / Contact',          about_path %> </li>
-  <li <%= "class=active" if yield(:title) == "News"        %>> <%= link_to 'News',               news_index_path %> </li>
+  <li <%= "class=active" if yield(:title) == "Home"       %>> 
+                                        <%= link_to 'Home', root_path %> </li>
+  
+  <li <%= "class=active" if yield(:title) == "Tech"        %>> 
+                          <%= link_to 'Learn About Solar',  tech_path %> </li>
+
+  <li <%= "class=active" if yield(:title) == "Residential" %>> 
+                          <%= link_to 'Residential', residential_path %> </li>
+
+  <li <%= "class=active" if yield(:title) == "Commercial"  %>> 
+                          <%= link_to 'Commercial',   commercial_path %> </li>
+
+  <li <%= "class=active" if yield(:title) == "About Us"    %>> 
+                          <%= link_to 'About Us / Contact', about_path %></li>
+
+  <li <%= "class=active" if yield(:title) == "News"        %>> 
+                          <%= link_to 'News', news_index_path %>         </li>
+
+  <li <%= "class=active" if yield(:title) == "Sign In"     %>>
+                          <%= link_to 'Sign In', signin_path %>          </li>
 </ul>
