Footer address changed

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -105,9 +105,9 @@
     <div id="company_info">
       <address>
         <strong>Suns Up Solar.</strong>
-        224 Dufour Street
+        719 Swift Street, Suite 13
         Santa Cruz, CA 95060
-        Phone: (831) 458-0203
+        Phone: (831) 425-1717
         Email: info@sunsupsolar.com
       </address>
     </div>
