--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -59,3 +59,10 @@ tbody{
   border-bottom-right-radius: 4px;
   border-bottom-left-radius: 4px;
 }
+#error_explanation {
+  color:#f00;
+  ul {
+    list-style: none;
+    margin: 0 0 18px 0;
+  }
+}
