--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -71,6 +71,7 @@
             <li>                <%= link_to 'Commercial', commercial_path %>  </li>
             <li>                <%= link_to 'About Us', about_path %>         </li>
             <li>                <%= link_to 'News', news_index_path %>        </li>
+            <li>                <%= link_to 'Sign In', signin_path %>         </li>
           </ul>
         </div>
         <div class="col-xs-3">
