--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -60,7 +60,7 @@ tbody{
   border-bottom-left-radius: 4px;
 }
 #error_explanation {
-  color:#f00;
+  color: #f2dede;
   ul {
     list-style: none;
     margin: 0 0 18px 0;
