--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -4,17 +4,17 @@
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #f2dede;
   display: table;
 }
 
 #error_explanation {
   width: 450px;
-  border: 2px solid red;
+  border: 2px #eed3d7;
   padding: 7px;
   padding-bottom: 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0;
+  background-color: #f2dede;
   h2 {
     text-align: left;
     font-weight: bold;
