Body text Update
to tech.html and a bunch of others

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -8,12 +8,7 @@
   float: right;
   width: 25%;
 }
-#ian{
-  height: 25%;
-  float: right;
-  width: 25%;
-}
-#tony{
+#roger{
   height: 25%;
   float: right;
   width: 25%;
