--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
         <div class="col-xs-3">
           <h4>External Links</h4>
           <ul>
-            <li>links</li>
+            <li><a href="http://us.sunpowercorp.com/" target="blank">Sunpower</a></li>
             <li>links</li>
             <li>links</li>
             <li>links</li>
