--- a/app/views/static_pages/tech.html.erb
+++ b/app/views/static_pages/tech.html.erb
@@ -4,25 +4,28 @@
 
 <p>Cutting through the misinformation, combined with the confusing rhetoric of your utility supplier leaves most people confused and perplexed.</p>
 
-<p>Suns Up Solar tells it as it is - Just contact us with any questions or issues you may have about solar.</p>
+<p><strong>Suns Up Solar</strong> tells it as it is - Just contact us with any questions or issues you may have about solar.</p>
 
 <p>Not sure you understand 'solar jargon'? this link will explain all those words you here when people talk about solar.</p>
 
 <h3>Electric, Heat, Grid Tied, Off-Grid</h3>
 
-<p>Most people considering Solar today think of PV (Photovoltaic) electric systems. These installations convert sunlight into electricity. However another option is Solar Thermal where sunlight is used to heat water.</p>
-
-<p>Typically a solar system will be 'Grid Tied' i.e. connected to PG&E supply. Off grid systems are available too.</p>
+<p>Most people considering Solar today think of PV (Photovoltaic) electric systems. These installations convert sunlight into electricity. However another option is Solar Thermal where sunlight is used to heat water.  Typically a solar system will be 'Grid Tied' i.e. connected to PG&E supply. ‘Off-grid’ systems are available too.
+<strong>Grid-Tied</strong> are simpler, cheaper installation. They “run the meter backwards” over a year and go out when the utility goes out. <strong>Off-grid</strong>, or <strong>Hybrid</strong>, applications are harder to build and more expensive. Most companies don’t do them. Sun Up Solar has done dozens.  People need them when they are off-grid entirely or when they want to be protected from natural disasters that may cut the power off from days to weeks.</p>
 
 <h3>Solar Electric</h3>   
 
-<p>Simply solar electric or PV (photovoltaic) modules convert sunlight to electricity. The PV modules generate DC electricity (DC) - sending it to the inverter. The inverter transforms the DC power into AC electricity for ordinary household needs. Your existing electrical panel distributes solar electricity and utility power to appliances etc.<p> 
+<p>Simply put, solar electric or PV (photovoltaic) modules convert sunlight to electricity. It’s a property of silicon and several other ‘semiconductors’ that they produce electricity when exposed to light. The PV modules generate DC electricity (DC) - sending it to the inverter. The inverter transforms the DC power into utility quality AC electricity  Your existing electrical panel distributes solar electricity through a separate circuit breaker to your home or business or back to the utility company.<p> 
 
-<p>For a beautifully presented interactive demo of how solar hot water and solar electrial systems work (compliments of Shuco solar products) Click on <a href="http://www.schueco.com/specials/solarspecial_usa/index_en_US.html" target="blank">this link</a>.</p>
+<p>For a beautifully presented demo of how solar electrical systems work and how Sunpower technology is different watch this video: </p>
+
+<iframe width="640" height="360" src="//www.youtube.com/embed/sznZHSuZXrc?feature=player_profilepage" frameborder="0" allowfullscreen></iframe>
+
+  <!-- <p>click on <a href="http://www.youtube.com/user/sunpower" target="blank">this link</a>.</p> -->
 
 <h3>Solar Hot Water</h3>
 
 <p>Solar hot water is an age old idea and anyone who leaves their garden hose in the sun will know that the sun can heat water. Today the systems available are much more efficient and virtually maintenance free.</p>
 
-<p>We provide and install Schuco  thermal systems for our customers. Schuco systems lead the world in reliability and design. These systems are called 'closed loop' systems that transfer the heat from the panels via a heat exchanger. The heat exchanger can be within a hot water tank or stand alone. Schuco systems are also designed to facilitate 'steamback' this is where the system is designed to allow the fluid in the solar circuit to turn to steam when the panels over heat (this is common when your hot water needs are low and the sun is shining). Many systems on the market are not good at coping with this situation resulting in replacement of the fluid every 2-3 years. Schuco systems, however, will only need this maintenance every 8-10 years.</p>
+<p>We provide and install SunMaxx thermal systems for our customers. SunMaxx systems lead the world in reliability and design. These systems are called 'closed loop' systems that transfer the heat from the panels via a heat exchanger. The heat exchanger can be within a hot water tank or stand alone. SunMaxx systems are also designed to facilitate 'steamback' this is where the system is designed to allow the fluid in the solar circuit to turn to steam when the panels over heat (this is common when your hot water needs are low and the sun is shining). Many systems on the market are not good at coping with this situation resulting in replacement of the fluid every 2-3 years. SunMaxx systems, however, will only need this maintenance every 8-10 years.</p>
 
