--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,10 +1,10 @@
 <% provide(:title, 'About Us') %>
 
 <address>
-  <strong>Suns Up Solar.</strong><br>
-  224 Dufour Street<br>
+  <strong>Suns Up Solar</strong><br>
+  719 Swift Street, Suite 13<br>
   Santa Cruz, CA 95060<br>
-  Phone: (831) 458-0203<br>
+  Phone: (831) 425-1717<br>
   Email: info@sunsupsolar.com
 </address>
 
@@ -26,8 +26,8 @@
 </div>
 
 <div class="row">
-  <h3>Tony Perkins – Sales</h3>
+  <h3>Roger Denalt – Marketing and Sales</h3>
 
-  <%= image_tag("tony.jpg", alt: "Photo of Tony Perkins", id: "tony") %>
-  <p>Tony for the last 25 years has successfully been in business in Santa Cruz. Tony is a fourth generation Santa Cruz native.  He has been coaching softball teams for the last 15 years. Tony is currently an active member of the Santa Cruz Host Lions and is also a past president of the Capitola Host Lions club. Tony has completed training in the field of Solar Energy and he resides in Santa Cruz with his wife and three daughters.</p> 
+  <%= image_tag("roger.jpg", alt: "Photo of Roger Denault", id: "roger") %>
+  <p>Roger is one cool dude who needs to write up some good stuff for this!</p> 
 </div>
