Moved Login Link

--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -17,6 +17,6 @@
   <li <%= "class=active" if yield(:title) == "News"        %>> 
                           <%= link_to 'News', news_index_path %>         </li>
 
-  <li <%= "class=active" if yield(:title) == "Sign In"     %>>
-                          <%= link_to 'Sign In', signin_path %>          </li>
+<!--   <li <%= "class=active" if yield(:title) == "Sign In"     %>>
+                          <%= link_to 'Sign In', signin_path %>          </li> -->
 </ul>
