--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -95,9 +95,9 @@
         <div class="col-xs-3">
           <h4>Admin Links</h4>
           <ul>
-            <li><%= link_to 'Users', users_path %></li>
+            <li><%= link_to 'Sign In', signin_path %> </li>
+            <li><%= link_to 'Users', users_path %>    </li>
             <li><%= link_to 'News', news_index_path %></li>
-            <li>links</li>
           </ul>
         </div>
       </div>
