--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,7 +14,7 @@
       <th>Email</th>
       <th>Zip Code</th>
       <th>E Bill</th>
-      <th>Access Key</th>
+      <th>Access Level</th>
       <th></th>
     </tr>
   </thead>
