--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -9,12 +9,14 @@
     <tr>
       <th>Name</th>
       <th>Address</th>
+      <th>Zip</th>
       <th>Phone</th>
       <th>Best TTC</th>
       <th>Email</th>
-      <th>Zip Code</th>
-      <th>E Bill</th>
-      <th>Access Level</th>
+      <th>E-Bill</th>
+      <th>Access</th>
+      <th></th>
+      <th></th>
       <th></th>
     </tr>
   </thead>
@@ -24,13 +26,15 @@
       <tr>
         <td><%= user.name %></td>
         <td><%= user.address %></td>
+        <td><%= user.zip %></td>
         <td><% pn = Phoner::Phone.parse(user.phone.to_s) %>
             <%= pn.format('(%a) %f-%l') %></td>
         <td><%= user.best_time %></td>
         <td><%= user.email %></td>
-        <td><%= user.zip %></td>
-        <td><%= user.e_bill %></td>
+        <td>$<%= user.e_bill %></td>
         <td><%= user.access %></td>
+        <td><%= link_to 'Show', user %></td>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
         <td><%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
