--- a/app/views/layouts/_nav_links.html.erb
+++ b/app/views/layouts/_nav_links.html.erb
@@ -17,6 +17,11 @@
   <li <%= "class=active" if yield(:title) == "News"        %>> 
                           <%= link_to 'News', news_index_path %>         </li>
 
-  <li <%= "class=active" if yield(:title) == "Sign In"     %>>
+  <% if current_user %>
+    <li><%= link_to "Sign Out", signout_path %></li>
+    <li>Hello <%= current_user.name %>.</li>
+  <% else %>
+    <li <%= "class=active" if yield(:title) == "Sign In"     %>>
                           <%= link_to 'Sign In', signin_path %>          </li>
+  <% end %>
 </ul>
